runs/runs/github.com/liaofuwei/pythoncoding/logs/test-notebook-notebook-test.ipynb-2020-07-15T11.42.txt
[I 200715 11:43:24 inrepo:36] Testing notebook notebook/test.ipynb
[W 200715 11:43:24 inrepo:48] No such kernel python2, falling back on kernel language=python
[W 200715 11:43:24 inrepo:60] Using kernel python3 to provide language: python
[I 200715 11:43:25 execute:404] Executing notebook with kernel: python3
Traceback (most recent call last):
  File "/src/inrepo.py", line 114, in <module>
    main()
  File "/src/inrepo.py", line 110, in main
    test_f(opts.test, opts.output_dir)
  File "/src/inrepo.py", line 75, in run_notebook
    nb, cwd=os.path.dirname(nb_path), kernel_name=kernel_name, timeout=600
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 737, in executenb
    return ep.preprocess(nb, resources, km=km)[0]
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 405, in preprocess
    nb, resources = super(ExecutePreprocessor, self).preprocess(nb, resources)
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/base.py", line 69, in preprocess
    nb.cells[index], resources = self.preprocess_cell(cell, resources, index)
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 448, in preprocess_cell
    raise CellExecutionError.from_cell_and_msg(cell, out)
nbconvert.preprocessors.execute.CellExecutionError: An error occurred while executing the following cell:
------------------
a = [1,2,3,4,5,6,7,8,9]
c = []
for i in range(0,len(a),3):
    b = a[i:i+3]
    c.append(b)
print c
------------------

[0;36m  File [0;32m"<ipython-input-2-f9a35fcd8e5d>"[0;36m, line [0;32m6[0m
[0;31m    print c[0m
[0m          ^[0m
[0;31mSyntaxError[0m[0;31m:[0m Missing parentheses in call to 'print'. Did you mean print(c)?

SyntaxError: Missing parentheses in call to 'print'. Did you mean print(c)? (<ipython-input-2-f9a35fcd8e5d>, line 6)


Container exited with status: {'Error': None, 'StatusCode': 1}
